--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ionic/react": "^0.0.5",
+    "effector": "^0.18.10",
+    "effector-react": "^0.18.10",
+    "firebase": "^6.0.4",
+    "immutable": "^4.0.0-rc.12",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
